--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,12 @@
     <title>Responsive portfolio website - Sunny</title>
 
     <!--=============== Simple Line Icons =================-->
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css">
   </head>
   <body>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!--=============== Font Awesome =================-->
+    <script src="https://kit.fontawesome.com/ad4e222dd6.js" crossorigin="anonymous"></script>
   </body>
 </html>
